# adoption

./: README.md
animation/: CMakeLists.txt
animation/src/: fontrendering.cpp  gl_backend.cpp  main.cpp  memory_allocator.cpp  primitives_2d.cpp  samplers.cpp  sobolmatrices.cpp  warps.cpp
cuda/: warps.cu
plots/: CMakeLists.txt
plots/src/: canvas.cpp  gl_backend.cpp  main.cpp  memory_allocator.cpp  vec_math.h
simd_benchmark/: common.h  common_simd.h  discrepancy.cpp  main.cpp  main2.cpp  profiler.cpp  rng.h  rng_integer.h
